--- a/no3.html
+++ b/no3.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
 
-        <div class="tenor-gif-embed" data-postid="14840523533907593485" data-share-method="host" data-aspect-ratio="1.0081" data-width="100%">
-            <a href="https://tenor.com/view/twitter-bubu-hitting-dudu-bubududukiwi-angry-bubu-dudu-gif-14840523533907593485">Twitter Bubu Hitting Dudu GIF</a>from <a href="https://tenor.com/search/twitter-gifs">Twitter GIFs</a>
+        <div class="tenor-gif-embed" data-postid="3853396863786971960" data-share-method="host" data-aspect-ratio="1.04265" data-width="100%">
+            <a href="https://tenor.com/view/angry-cat-cat-gif-3853396863786971960">Angry Cat Sticker</a>from <a href="https://tenor.com/search/angry+cat-stickers">Angry Cat Stickers</a>
         </div> 
         <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
